chore: better launchers, reusable connector remote